--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -52,7 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: Docker-image
     steps:
-    - name Download code
+    - name: Download code
       uses: actions/download-artifact@v1
       with:
         name: code
