--- a/.github/workflows/dev-workflows.yml
+++ b/.github/workflows/dev-workflows.yml
@@ -10,7 +10,7 @@ env:
 jobs:
   Clone-down:
     name: Clone down repo
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted]
     container: gradle:6-jdk11
     steps:
       - uses: actions/checkout@v2
@@ -20,7 +20,7 @@ jobs:
           name: code
           path: .
   Build:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted]
     needs: Clone-down
     container: gradle:6-jdk11
     steps:
